--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,35 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+* {
+  border-box-sizing: border-box;
+}
+
+.filterableProductTable {
+  margin: auto;
+  margin-top: 10px;
+}
+
+table {
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  margin: auto;
+  padding: 30px;
+  height: 300px;
+  width: 300px;
+}
+
+form {
+  padding: 10px;
+}
+
+input[type='text'] {
+  padding: 5px;
+  margin-bottom: 5px;
+}
+
+input[type='checkbox'] {
+  padding: 10px;
+  margin-bottom: 5px;
+}
